@@ -1,6 +1,7 @@
 === Deluge 1.2.0_rc4 (In Development) ===
 ==== Core ====
 	* Fix deleting old .fastresume files with fresh configs
+	* Fix files list when using magnet uris
 
 ==== GtkUI ====
 	* Fix showing the 'Other' speed dialogs in Windows
